--- a/script/tsconfig.json
+++ b/script/tsconfig.json
@@ -22,7 +22,7 @@
     ],
     "paths": {
       "@/*": [
-        "src/*"
+        "../src/*"
       ]
     },
     "lib": [
@@ -33,14 +33,11 @@
     ]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "./**/*.ts",
+    "./**/*.tsx",
+    "./**/*.vue"
   ],
   "exclude": [
-    "node_modules",
-    "script"
+    "node_modules"
   ]
 }
