--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "core-js": "^3.4.3",
     "element-ui": "^2.4.5",
+    "reflect-metadata": "^0.1.13",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
