--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,7 +19,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
       run: |
-        npm run build --if-present
-        npm test
+        npm i -g yarn
+        yarn install
+        yarn build
       env:
         CI: true
