--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .DS_Store
 node_modules
 /dist
+script/node_modules
+script/dist
 
 # local env files
 .env.local
@@ -21,3 +23,4 @@ yarn-error.log*
 *.sln
 *.sw?
 *.code-workspace
+*.lock
