--- a/script/package.json
+++ b/script/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "@types/lodash": "^4.14.149",
     "@types/webpack": "^4.41.1",
     "babel-loader": "^8.0.6",
     "ts-loader": "^6.2.1",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
-    "core-js": "^3.6.1"
+    "core-js": "^3.6.1",
+    "lodash": "^4.17.15"
   }
 }
