--- a/script/package.json
+++ b/script/package.json
@@ -24,7 +24,6 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
-    "core-js": "^3.6.1",
-    "lodash": "^4.17.15"
+    "core-js": "^3.6.1"
   }
 }
