--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "array-proto-ext": "^1.4.3",
     "axios": "^0.18.0",
     "core-js": "^3.4.3",
