--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VUE_APP_BASE_API='http://127.0.0.1:8000'
 VUE_APP_MOCK="true"
 VUE_APP_I18N_LOCALE='zh-CN'
-VUE_APP_I18N_FALLBACK_LOCALE='zh-CN'
+VUE_APP_I18N_FALLBACK_LOCALE='en'
