--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
+    "@moefe/vue-aplayer": "^2.0.0-beta.5",
     "array-proto-ext": "^1.4.3",
     "axios": "^0.18.0",
     "core-js": "^3.4.3",
@@ -19,6 +20,7 @@
     "reflect-metadata": "^0.1.13",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-audio-visual": "^1.4.1",
     "vue-class-component": "^7.0.2",
     "vue-i18n": "^8.0.0",
     "vue-property-decorator": "^8.3.0",
