--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       "webpack",
       "vue-tsx-support/enable-check",
       "vue-tsx-support/options/allow-unknown-props",
-      "@moefe/vue-aplayer/types/aplayer"
+      "@moefe/vue-aplayer/types/aplayer",
+      "avue-types"
     ],
     "paths": {
       "@/*": [
