--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,24 @@
     "strict": true,
     "jsx": "preserve",
     "importHelpers": true,
+    "strictFunctionTypes": false,
     "moduleResolution": "node",
+    "skipLibCheck": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "esModuleInterop": true,
+    "downlevelIteration": true,
     "allowSyntheticDefaultImports": true,
+    "allowJs": true,
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
+      "webpack-env",
+      "webpack",
+      "vue-tsx-support/enable-check",
+      "vue-tsx-support/options/allow-unknown-props",
+      "@moefe/vue-aplayer/types/aplayer",
+      "webpack",
       "webpack-env"
     ],
     "paths": {
@@ -34,6 +45,7 @@
     "tests/**/*.tsx"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "script"
   ]
 }
