--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ddmonitor",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,10 +9,12 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@moefe/vue-aplayer": "^2.0.0-beta.5",
     "array-proto-ext": "^1.5.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
+    "reflect-metadata": "^0.1.13",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.17.3",
@@ -42,6 +44,7 @@
     "vue-cli-plugin-axios-ts": "^1.0.2",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-cli-plugin-i18n": "^1.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-chain": "^6.4.0"
   }
 }
