--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ddmonitor",
-  "version": "0.2.0",
+  "version": "0.3.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@moefe/vue-aplayer": "^2.0.0-beta.5",
+    "af-table-column": "^1.0.3",
     "array-proto-ext": "^1.5.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
